adds some models and tests
